@@ -515,6 +515,8 @@ lang.ruby.tokens.comments (#.*)
 lang.ruby.tokens.comments.format 8 bold
 lang.ruby.tokens.regular_expressions (\/.+?[^\\]\/)
 lang.ruby.tokens.regular_expressions.format red bold
+lang.ruby.tokens.regular_expressions2 (%r\{.+?[^\}]\})
+lang.ruby.tokens.regular_expressions2.format red bold
 lang.ruby.tokens.doublequoted_strings (\".*?[^\\]\"|\"\")
 lang.ruby.tokens.doublequoted_strings.format green bold
 lang.ruby.tokens.singlequoted_strings ('.*?[^\\]'|'')
